--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="container">
+    <app-header></app-header>
+    <app-tasks></app-tasks>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+  </div>
