--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
     <h1>{{ title }}</h1>
     <app-button
-      color="green"
-      label="Add"
+      color="{{showAddTask ? 'red' : 'green'}}"
+      label="{{showAddTask ? 'Close' : 'Add'}}"
       (btnClick)="toggleAddTask()"
     ></app-button>
 </header>
